--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <li>Instant blockchain transactions</li>
             <li>Automated dispute resolution</li>
             <li>Low-cost cross-border payments</li>
+            <li>not a real website</li>
         </ul>
         <button class="button" onclick="window.location.href='https://hireahitman.services';">Learn More</button>
         <h2>&copy; 2025 GeekPay LLC. All rights reserved.</h2>
